--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -21,8 +21,9 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "bootstrap": "4.4.1",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.0",
     "popper.js": "^1.16.1",
     "rxjs": "^5.5.6",
